Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumberNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(number var)
        if var = 5.0
            output "passed"
        end
    end
end
