Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjNumberWrapped.quorum
class main
    action Main
        Number num = 7.5
    end
end